--- a/photoshoot.html
+++ b/photoshoot.html
@@ -90,7 +90,7 @@
                 ["C1", "D1", "E1", "F1", "G1", "A1", "B1", "C2", "D2", "E2", "F2", "G2", "A2", "B2", "C3", "D3", "E3", "F3", "G3", "A3", "B3", "C4", "D4", "E4", "F4", "G4", "A4", "B4", "C5", "D5", "E5", "F5", "G5", "A5", "B5"]
             */
             beep: {
-                notes: [].concat(... '12345'.split('').map(num => 'CDEFGAB'.split('').map(note => note + num))), // returns [C1,C2,C3 ... G5,A5,B5]
+                notes: [].concat(... '012345'.split('').map(num => 'CDEFGAB'.split('').map(note => note + num))), // returns [C1,C2,C3 ... G5,A5,B5]
                 seconds: 1,
             },
 
@@ -182,8 +182,8 @@
 
 
 
-        function sameSign(a, b) {
-            return a === 0 || b === 0 || (a < 0 && b < 0) || (a > 0 && b > 0)
+        function sameSign(target, marker) {
+            return target === 0 || (target < 0 && marker < 0) || (target > 0 && marker > 0)
         }
 
         function sameQuad(target, marker) {
@@ -319,22 +319,26 @@
 
                     const target = config.targets[name]
                     const tolerance = config.targets.tolerance
+                    const factor = Math.pow(10, config.digits || 2)
 
-                    function pErr(a, b, digits) {
-                        const factor = Math.pow(10, digits || config.digits || 2)
-                        return Math.floor((Math.abs(a - b) / Math.max(Math.abs(a), Math.abs(b))) * factor) / factor
+                    function pCorrect(alpha, beta) {
+                        alpha = alpha < 0 ? -alpha : alpha
+                        beta = beta < 0 ? -beta : beta
+                        return Math.floor(Math.abs(alpha < beta ? alpha / beta : beta / alpha) * factor) / factor
                     }
 
                     const delta = {
-                        roll: pErr(target._z, rotation._z),
-                        pitch: pErr(target._x, rotation._x),
-                        yaw: pErr(target._y, rotation._y),
+                        roll: pCorrect(target._z, rotation._z),
+                        pitch: pCorrect(target._x, rotation._x),
+                        yaw: pCorrect(target._y, rotation._y),
                     }
 
-                    $msg.html(`roll: ${delta.roll} pitch: ${delta.pitch} yaw: ${delta.yaw}`)
 
-                    const diff = maxDiff(target, rotation)
+                    const diff = Math.floor(maxDiff(target, rotation) * factor) / factor
                     theSpeaker.pulse(diff)
+
+                    $msg.html(`diff: ${diff} roll: ${delta.roll} pitch: ${delta.pitch} yaw: ${delta.yaw}`)
+
 
                     if (!sameQuad(target, rotation)) return
 
